# odoo-commands

./: .gitignore  README.md  download-odoo.sh  noxfile.py  odoo11-requirements.txt  pyproject.toml  pytest.ini  req.txt  requirements.txt
docs/: conf.py  index.rst
ocli/: createdb.py  generate_pot.py  main.py  utils.py  utils_init.py
odoo_commands/: app.py  astroid_parsing.py  config.py  createdb.py  database_mock.py  docs.md  exec_parsing.py  fields.txt  generate_odoo_stubs.py  generate_pot.py  module_finder.py  module_set.py  odoo_translate.py  project.py  stack2.py  test_env.py  test_property.py  test_registry.py
odoo_commands/OFF/: definitions.py  fields.txt  parsing.py
odoo_commands/dateutil/: relativedelta.py
odoo_commands/dateutil_OFF/: parser.py  relativedelta.py
odoo_commands/odoo/: api.py  exceptions.py  fields.py  sql_db.py
odoo_commands/odoo/modules/: module.py
odoo_commands/odoo/tools/: cache.py  config.py  convert.py  func.py  misc.py  translate.py
odoo_commands/odoo_mock/: __init__.py  api.py  decimal_precision.py  fields.py  models.py
odoo_commands/odoo_mock/modules/: registry.py
odoo_commands/odoo_mock/tools/: __init__.py  parse_version.py  safe_eval.py  view_validation.py
project/: pyproject.toml
project/addons/module_name/: README.rst
project/addons/module_name/i18n/: module_name.pot
project/addons/module_name/static/src/js/: module.js
project/addons/module_name/views/: sale_order.xml
tests/: conftest.py  test_dev.py  test_generate_pot.py  test_module_set.py  test_ocli.py  test_project.py  test_translation.py
tests/addons/module_name/: __manifest__.py
tests/addons/module_name/models/: model_name.py
tests/addons/module_name/security/: base_access.xml
tests/addons/module_name/static/src/xml/: template.xml
tests/project/: pyproject.toml
tests/project/addons/module_a/: README.rst  __manifest__.py
tests/project/addons/module_b/: README.rst  __manifest__.py
tests/project/addons/module_name/: __manifest__.py
tests/project/addons/module_name/models/: __init__.py  model_name.py
