[tool.poetry]
name = "odoo-commands"
version = "0.1.1-dev"
description = "Project description"
authors = ["Dmitry Voronin <dimka665@gmail.com>"]

repository = "https://github.com/voronind/ocli"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
click_odoo = "^1.5.0"
click-odoo-contrib = "^1.15.0"
networkx = "<2.7"
manifestoo-core = "^0.10.2"
typer = {extras = ["all"], version = "^0.7.0"}
Babel = "^2.11.0"
tomlkit = "0.11.6"
pytest-pythonpath = "^0.7.4"

[tool.poetry.dev-dependencies]
ipython = "*"
pytest = "*"
pytest-pythonpath = "*"
setuptools = "<58"
odoo = {path = "odoo-11.0.post20201201"}
# Odoo needs old versions
Werkzeug = "<1"
Jinja2 = "~=2.10.1"
PyYAML = "~=3.0"
psycopg2 = "~=2.8.3"
vatnumber = "<2"
python-stdnum = "1.8"
netifaces = "^0.11.0"

[tool.poetry.scripts]
oc = "odoo_commands.app:app"

[tool.pytest]
testpaths = "tests"
norecursedirs = [".*/", "docs/"]

[tool.flake8]
max-line-length = 120
exclude = [".*/", "docs/_build/"]

[tool.coverage.run]
branch = true
source = "ocli/"

[tool.mypy]
check_untyped_defs = true

#[testenv]
#skip_install = true
#deps = pipenv
#commands =
#    pipenv install --dev --skip-lock
#    pipenv run fulltest
#
#[testenv:docs]
#basepython = python3.6
#deps =
#    pipenv
#    sphinx
#commands =
#    pipenv install --skip-lock
#    pipenv run doctest
#    pipenv run build-docs

#[scripts]
#test = "pytest --exitfirst --failed-first"
#fulltest = "pytest --flake8 --cov --cov-fail-under=80 --no-cov-on-fail ocli tests docs/conf.py"
## We use equivalent of "make mode":
## sphinx-build -M builder source build  =>
## sphinx-build -b builder -d source/doctrees source build/builder
#docs = "sphinx-autobuild --open-browser --port 0 --delay 1 -d docs/_build/doctrees docs docs/_build/html"
#doctest = "sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest"
#build-docs = "sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
