[tool.poetry]
name = "odoo-commands"
version = "0.1.1-dev"
description = "Project description"
authors = ["Dmitry Voronin <dimka665@gmail.com>"]

repository = "https://github.com/odoo-ru/odoo-commands"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
click_odoo = "^1.5.0"
click-odoo-contrib = "^1.15.0"
networkx = "<2.7"
manifestoo-core = "^0.10.2"
typer = {extras = ["all"], version = "^0.9.0"}
Babel = "^2.11.0"
tomlkit = "0.11.6"
pytest-pythonpath = "^0.7.4"

[tool.poetry.dev-dependencies]
ipython = "*"
pytest = "*"
pytest-pythonpath = "*"
setuptools = "<58"
odoo = {path = "odoo-11.0.post20201201"}
# Odoo needs old versions
Werkzeug = "<1"
Jinja2 = "~=2.10.1"
PyYAML = "~=3.0"
psycopg2 = "~=2.8.3"
vatnumber = "<2"
python-stdnum = "1.8"
netifaces = "^0.11.0"

[tool.poetry.scripts]
oc = "odoo_commands.app:app"

[tool.pytest]
testpaths = "tests"
norecursedirs = [".*/", "docs/"]

[tool.flake8]
max-line-length = 120
exclude = [".*/", "docs/_build/"]

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
